refactored calculating peak distances to be more robust & extendable. added plotting of peak distance to notebook

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -77,7 +77,6 @@
    },
    "source": [
     "#@title Colab Setup { display-mode: \"form\" }\n",
-    "from opdynamics.visualise.dense import plot_surfaces\n",
     "try:\n",
     "    # connect GDrive for retrieving/saving results\n",
     "    from google.colab import drive\n",
@@ -171,6 +170,8 @@
     "                                  show_noise_panel,\n",
     "                                  show_opinion_grid,\n",
     "                                  )\n",
+    "from opdynamics.metrics.opinions import calc_distribution_differences\n",
+    "from opdynamics.visualise.dense import plot_surface_product, plot_surfaces\n",
     "from opdynamics.utils.distributions import negpowerlaw\n",
     "from opdynamics.utils.plot_utils import df_multi_mask, move_cbar_label_to_title\n",
     "from opdynamics.utils.constants import *\n",
@@ -2333,7 +2334,49 @@
    "outputs": [],
    "source": [
     "plot_surfaces(df, \"D\", \"sample_size\", parameters, range_variables)\n",
-    "plt.gcf().savefig(os.path.join(\"output\",\"d_sample_surface.pdf\"))"
+    "# plt.gcf().savefig(os.path.join(\"output\",\"d_sample_surface.pdf\"))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "plot_surface_product(df, \"D\", \"sample_size\", parameters, range_variables)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "zs = calc_distribution_differences(df, \"D\", \"sample_size\",range_variables, N=N)\n",
+    "\n",
+    "g = sns.relplot(\n",
+    "    x=\"D\",\n",
+    "    y=PEAK_DISTANCE,\n",
+    "    hue='beta',\n",
+    "    col='alpha',\n",
+    "    row='K',\n",
+    "    data=zs,\n",
+    "    height=2,\n",
+    "    aspect=1.5,\n",
+    "    # palette=sns.color_palette('colorblind', 3),\n",
+    "    facet_kws=dict(margin_titles=True),\n",
+    ")\n",
+    "g.set(xscale='log', xlim=(0.1, 6))"
    ],
    "metadata": {
     "collapsed": false,
