remove circular import dependency

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -48,12 +48,12 @@
     "    - upgrade ``tqdm`` for ``tenumerate`` function\n",
     "    - upgrade ``tables`` for appending to `hdf5` files without throwing an error.\n",
     "    - ``vaex`` for large file reading without crashing the session\n",
-    "        - upgrade ``IPython`` for ``vaex`` [see #514](https://github.com/vaexio/vaex/issues/514)\n",
+    "        - upgrade ``IPython`` for ``vaex`` [see #514](https://github.com/vaexio/vaex/issues/514) (upgrading seems to make colab unhappy and won't display Jupyter widgets).\n",
     "1. make `.cache` and `.output` in your Google Drive under `My Drive > Colab Notebooks > opdynamics`\n",
     "1. create symlinks between Colab's temporary local `.cache` and `.output` and the Google Drive folders for persistence\n",
     "\n",
     "> Note:\n",
-    "> 1. After installing packages it **must** restart runtime.\n",
+    "> 1. After installing packages you **must** restart runtime.\n",
     "> 1. Creating symlinks will fail when running the cell again. This is expected."
    ],
    "metadata": {
