re-generate vaex dataframe for new data resolves #1

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -2362,7 +2362,9 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "zs = calc_distribution_differences(df, \"D\", \"sample_size\",range_variables, N=N)\n",
+    "logging.getLogger(\"asyncio\").setLevel(logging.WARNING)\n",
+    "zs = calc_distribution_differences(df, \"D\", \"sample_size\", range_variables,\n",
+    "                                   N=parameters[\"N\"])\n",
     "\n",
     "g = sns.relplot(\n",
     "    x=\"D\",\n",
