allow subdirectories for caching to clean up cache folder

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -1867,7 +1867,7 @@
     "    fig.subplots_adjust(hspace=0.8)\n",
     "    for i, (key, other) in enumerate(parameters.items()):\n",
     "        show_noise_panel(df, key,\n",
-    "                         bw=0.1, cut=2,\n",
+    "                         kde_kwargs=dict(bw=0.1, cut=2),\n",
     "                         ax=ax[i])\n",
     "        for _ax in ax[i]:\n",
     "            _ax.set_title(f\"{other['title']}={_ax.get_title()}\")\n",
@@ -2296,7 +2296,7 @@
     "    \"sample_size\": {\"range\": sample_size_range, \"title\": \"n\"},\n",
     "    \"alpha\": {\"range\": [1, 2, 3], \"title\": \"α\"},\n",
     "    \"beta\": {\"range\": [0, 1, 2, 3], \"title\": \"β\"},\n",
-    "    \"K\": {\"range\": [1, 2, 3]},\n",
+    "    \"K\": {\"range\": [1, 2, 3], \"title\": \"K\"},\n",
     "}\n",
     "\n",
     "df = Simulation.run_product(\n",
