peak distance updates - add variance to peak distance recording - updated notebook and plotting of peak distances - added peak distance symbol

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -198,7 +198,8 @@
     "logging.basicConfig(level=logging.DEBUG)\n",
     "logging.getLogger().setLevel(logging.DEBUG)\n",
     "eclogger.setLevel(logging.DEBUG)\n",
-    "logging.getLogger('matplotlib').setLevel(logging.INFO)"
+    "logging.getLogger(\"matplotlib\").setLevel(logging.INFO)\n",
+    "logging.getLogger(\"asyncio\").setLevel(logging.WARNING)"
    ],
    "execution_count": 2,
    "outputs": []
@@ -2333,7 +2334,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "plot_surfaces(df, \"D\", \"sample_size\", parameters, range_variables)\n",
+    "zs = plot_surfaces(df, \"D\", \"sample_size\", parameters, range_variables)\n",
     "# plt.gcf().savefig(os.path.join(\"output\",\"d_sample_surface.pdf\"))"
    ],
    "metadata": {
@@ -2348,7 +2349,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "plot_surface_product(df, \"D\", \"sample_size\", parameters, range_variables)"
+    "zs = plot_surface_product(df, \"D\", \"sample_size\", parameters, range_variables)"
    ],
    "metadata": {
     "collapsed": false,
@@ -2362,23 +2363,42 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "logging.getLogger(\"asyncio\").setLevel(logging.WARNING)\n",
     "zs = calc_distribution_differences(df, \"D\", \"sample_size\", range_variables,\n",
     "                                   N=parameters[\"N\"])\n",
     "\n",
-    "g = sns.relplot(\n",
-    "    x=\"D\",\n",
-    "    y=PEAK_DISTANCE,\n",
-    "    hue='beta',\n",
-    "    col='alpha',\n",
-    "    row='K',\n",
-    "    data=zs,\n",
-    "    height=2,\n",
-    "    aspect=1.5,\n",
-    "    # palette=sns.color_palette('colorblind', 3),\n",
-    "    facet_kws=dict(margin_titles=True),\n",
-    ")\n",
-    "g.set(xscale='log', xlim=(0.1, 6))"
+    "zs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "with sns.plotting_context(\"paper\"):\n",
+    "    g = sns.relplot(\n",
+    "        x=\"D\",\n",
+    "        y=PEAK_DISTANCE,\n",
+    "        hue='β',\n",
+    "        col='α',\n",
+    "        row='K',\n",
+    "        data=zs.rename({'beta':'β', 'alpha':'α'}, axis=1),\n",
+    "        height=1.5,\n",
+    "        aspect=2,\n",
+    "        # palette=sns.color_palette('colorblind', 3),\n",
+    "        facet_kws=dict(margin_titles=True, legend_out=False),\n",
+    "        # ec=\"None\", alpha=0.8,\n",
+    "        # s=5,\n",
+    "        legend='full',\n",
+    "    )\n",
+    "    g.set(xscale='log', xlim=(0.1, 6))\n",
+    "    g.savefig(\"output/D_v_peak.pdf\")\n",
+    "    ;"
    ],
    "metadata": {
     "collapsed": false,
@@ -2405,27 +2425,9 @@
     "                   margin_titles=True, legend_out=True)\n",
     "kde_kwargs = dict(bw=0.01)\n",
     "\n",
-    "# choose a subset of D and sample_size to import\n",
-    "D_range = D_range[::2]\n",
-    "\n",
-    "sample_size_range = sample_size_range[::10]\n",
-    "\n",
-    "range_variables = {\n",
-    "    \"D\": {\"range\": D_range, \"title\": \"D\"},\n",
-    "    \"sample_size\": {\"range\": sample_size_range, \"title\": \"n\"},\n",
-    "    \"alpha\": {\"range\": [1, 2, 3], \"title\": \"α\"},\n",
-    "    \"beta\": {\"range\": [0, 1, 2, 3], \"title\": \"β\"},\n",
-    "    \"K\": {\"range\": [1, 2, 3]},\n",
-    "}\n",
-    "\n",
-    "sub_df = Simulation.run_product(\n",
-    "    range_variables,\n",
-    "    noise_start=0,\n",
-    "    cache=True,\n",
-    "    cache_sim=True,\n",
-    "    parallel=True,\n",
-    "    **parameters\n",
-    ")\n",
+    "sub_df = df[\n",
+    "    (df[\"D\"].isin([0.0, 1.0, 2.0, 3.0, 4.0, 5.0])) & (df[\"sample_size\"].isin([1, 10]))\n",
+    "]\n",
     "\n",
     "defaults = {\n",
     "    'D': 'col',\n",
@@ -2466,6 +2468,47 @@
     "    g.add_legend()\n",
     "out = widgets.interactive_output(f, pickers)\n",
     "widgets.VBox([widgets.HBox(list(pickers.values())), out])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# polar opinions\n",
+    "α = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "K = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "β = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "\n",
+    "grid_kwargs = dict(sharex=True, sharey=False,\n",
+    "                   margin_titles=True, legend_out=True)\n",
+    "kde_kwargs = dict(bw=0.01)\n",
+    "\n",
+    "assert α in range_variables['alpha']['range']\n",
+    "assert β in range_variables['beta']['range']\n",
+    "assert K in range_variables['K']['range']\n",
+    "\n",
+    "\n",
+    "defaults = {\n",
+    "    'alpha': α,\n",
+    "    'K': K,\n",
+    "    'beta': β,\n",
+    "\n",
+    "}\n",
+    "\n",
+    "grid_kwargs = dict(sharex=True, sharey=False,\n",
+    "                   margin_titles=True, legend_out=True)\n",
+    "kde_kwargs = dict(bw=0.01)\n",
+    "\n",
+    "sub_df = df[\n",
+    "    (df[\"D\"].isin([0.0, 1.0, 2.0, 3.0, 4.0, 5.0])) & (df[\"sample_size\"].isin([1, 10]))\n",
+    "]"
    ],
    "metadata": {
     "collapsed": false,
