changes to CLT playground in notebook

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -2176,16 +2176,22 @@
     "D = 3 #@param {type:\"slider\", min:0, max:20, step:0.5}\n",
     "sample_size = 10 #@param {type:\"slider\", min:1, max:100, step:1}\n",
     "\n",
+    "variable_name = \"Euler\" #@param [\"Euler\", \"RK45\"]\n",
     "iterations = 1 #@param {type:\"slider\", min:1, max:20, step:1}\n",
     "\n",
     "fig, ax = plt.subplots(1, 2, gridspec_kw=dict(width_ratios=[1,0.1]), sharey=True)\n",
     "fig.subplots_adjust(wspace=0.1, hspace=0.5)\n",
     "palette = sns.color_palette(\"husl\", n_colors=iterations)\n",
+    "\n",
+    "seeds = np.geomspace(1, 100000, num=20, dtype=int)\n",
+    "\n",
     "for i in range(iterations):\n",
     "    sc = Simulation.run_params(cls=SampleChamber, N=N, m=m, K=K, alpha=α, beta=β,\n",
-    "                            activity=activity_distribution, gamma=Υ, epsilon=ε,\n",
-    "                            r=r, dt=dt, T=T,\n",
-    "                            method=\"RK45\", plot_opinion=False, cache=True)\n",
+    "                               activity=activity_distribution, gamma=Υ, epsilon=ε,\n",
+    "                               r=r, dt=dt, T=T, D=D, sample_size=sample_size,\n",
+    "                               method=\"Euler\",\n",
+    "                               plot_opinion=False,\n",
+    "                               seed=seeds[i], cache=\"all\")\n",
     "\n",
     "    vis = VisEchoChamber(sc)\n",
     "    vis.show_opinions(color_code='line', ax=ax[0])\n",
