refactor of files

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -171,7 +171,7 @@
     "                                  show_opinion_grid,\n",
     "                                  )\n",
     "from opdynamics.metrics.opinions import calc_distribution_differences\n",
-    "from opdynamics.visualise.dense import plot_surface_product, plot_surfaces\n",
+    "from opdynamics.visualise import plot_surface_product, plot_surfaces\n",
     "from opdynamics.utils.distributions import negpowerlaw\n",
     "from opdynamics.utils.plot_utils import df_multi_mask, move_cbar_label_to_title\n",
     "from opdynamics.utils.constants import *\n",
