--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -2224,6 +2224,34 @@
   },
   {
    "cell_type": "code",
+   "source": [
+    "# run this to determine D range\n",
+    "from opdynamics.utils.cache import get_cache_dir\n",
+    "import vaex\n",
+    "all_d = set()\n",
+    "\n",
+    "cache_dir = get_cache_dir()\n",
+    "file_name = os.path.join(cache_dir, \"noise_source.h5\")\n",
+    "vaex_file_name = file_name.replace(\".h5\", \".hdf5\")\n",
+    "\n",
+    "if os.path.exists(file_name):\n",
+    "    if os.path.exists(vaex_file_name):\n",
+    "        df = vaex.open(vaex_file_name)\n",
+    "        for start, end, chunk in df.to_pandas_df(chunk_size=50000):\n",
+    "            all_d.update(set(chunk['D']))\n",
+    "all_d"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
@@ -2246,7 +2274,7 @@
     "    method=\"Euler\",\n",
     ")\n",
     "\n",
-    "D_range = np.round(np.arange(0.0, 5.0001, 0.1), 3)\n",
+    "D_range = sorted(all_d) # np.round(np.arange(0.0, 5.0001, 0.1), 3)\n",
     "\n",
     "sample_size_range = np.arange(1, 50.0001, 1, dtype=int)\n",
     "\n",
@@ -2293,7 +2321,7 @@
    "outputs": [],
    "source": [
     "zs = plot_surfaces(df, \"D\", \"sample_size\", parameters, range_parameters)\n",
-    "# plt.gcf().savefig(os.path.join(\"output\",\"d_sample_surface.pdf\"))"
+    "plt.gcf().savefig(os.path.join(\"output\",\"d_sample_surface.pdf\"))"
    ],
    "metadata": {
     "collapsed": false,
@@ -2338,6 +2366,13 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "from matplotlib.cbook import flatten\n",
+    "n_cols = len(range_parameters['alpha']['range'])\n",
+    "n_rows = len(range_parameters['K']['range'])\n",
+    "width = 3.375/n_cols\n",
+    "aspect = 1.2\n",
+    "height = width/aspect\n",
+    "\n",
     "with sns.plotting_context(\"paper\"):\n",
     "    g = sns.relplot(\n",
     "        x=\"D\",\n",
@@ -2346,16 +2381,54 @@
     "        col='α',\n",
     "        row='K',\n",
     "        data=zs.rename({'beta':'β', 'alpha':'α'}, axis=1),\n",
-    "        height=1.5,\n",
-    "        aspect=2,\n",
+    "        height=height,\n",
+    "        aspect=aspect,\n",
     "        # palette=sns.color_palette('colorblind', 3),\n",
-    "        facet_kws=dict(margin_titles=True, legend_out=False),\n",
+    "        facet_kws=dict(margin_titles=True, legend_out=True),\n",
     "        # ec=\"None\", alpha=0.8,\n",
-    "        # s=5,\n",
+    "        linewidth=0.1,\n",
+    "        s=5,\n",
     "        legend='full',\n",
     "    )\n",
     "    g.set(xscale='log', xlim=(0.1, 6))\n",
+    "    for ax in flatten(g.axes):\n",
+    "        ax.set_ylabel(ax.get_ylabel(), rotation=0, ha='right')\n",
     "    g.savefig(\"output/D_v_peak.pdf\")\n",
+    "    ;"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "with sns.plotting_context(\"paper\"):\n",
+    "    g = sns.relplot(\n",
+    "        x=\"D\",\n",
+    "        y=PEAK_DISTANCE_VAR,\n",
+    "        hue='β',\n",
+    "        col='α',\n",
+    "        row='K',\n",
+    "        data=zs.rename({'beta':'β', 'alpha':'α'}, axis=1),\n",
+    "        height=height,\n",
+    "        aspect=aspect,\n",
+    "        # palette=sns.color_palette('colorblind', 3),\n",
+    "        facet_kws=dict(margin_titles=True, legend_out=True),\n",
+    "        # ec=\"None\", alpha=0.8,\n",
+    "        linewidth=0.1,\n",
+    "        s=5,\n",
+    "        legend='full',\n",
+    "    )\n",
+    "    g.set(xscale='log', xlim=(0.1, 6))\n",
+    "    for ax in flatten(g.axes):\n",
+    "        ax.set_ylabel(ax.get_ylabel(), rotation=0, ha='right')\n",
+    "    g.savefig(\"output/D_v_peak_var.pdf\")\n",
     "    ;"
    ],
    "metadata": {
@@ -2456,20 +2529,17 @@
     "defaults = {\n",
     "    'alpha': α,\n",
     "    'K': K,\n",
-    "    'beta': β,\n",
+    "    # 'beta': β,\n",
     "}\n",
-    "\n",
-    "grid_kwargs = dict(sharex=True, sharey=False,\n",
-    "                   margin_titles=True, legend_out=True)\n",
-    "kde_kwargs = dict(bw=0.01)\n",
-    "\n",
+    "sub_D_range = [0.0, 1.0, 3.0, 5.0]\n",
+    "sub_sample_range = [1, 10, 40]\n",
     "sub_df = df_multi_mask(\n",
     "    df[\n",
-    "        (df[\"D\"].isin([0.0, 1.0, 2.0, 3.0, 4.0, 5.0]))\n",
-    "        & (df[\"sample_size\"].isin([1, 10]))\n",
+    "        (df[\"D\"].isin(sub_D_range))\n",
+    "        & (df[\"sample_size\"].isin(sub_sample_range))\n",
     "    ],\n",
     "    defaults,\n",
-    ")"
+    ").to_pandas_df()"
    ],
    "metadata": {
     "collapsed": false,
@@ -2483,8 +2553,26 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "g = show_opinion_grid(sub_df, ['D','sample_size'], grid_kwargs=grid_kwargs, kde_kwargs=kde_kwargs)\n",
-    "g.add_legend(fontsize='large')"
+    "with sns.plotting_context(\"paper\"):\n",
+    "    sns.set_palette(sns.color_palette('colorblind',3))\n",
+    "    n_cols = len(sub_D_range)\n",
+    "    n_rows = len(sub_sample_range)\n",
+    "    width = 3.375*2/n_cols\n",
+    "    aspect = 1.5\n",
+    "    height = width/aspect\n",
+    "    grid_kwargs = dict(sharex=True, sharey=False,\n",
+    "                   margin_titles=True, legend_out=True, height=height, aspect=aspect)\n",
+    "    kde_kwargs = dict(bw=0.001)\n",
+    "    g = show_opinion_grid(sub_df.rename({'sample_size':'n', 'beta':'β'}, axis=1),\n",
+    "                          ['D','n', 'β'],\n",
+    "                          grid_kwargs=grid_kwargs, kde_kwargs=kde_kwargs)\n",
+    "    g.set(xlim=(-5,5))\n",
+    "    for ax in g.axes[-1]:\n",
+    "        ax.set_xlabel(f'{OPINION_SYMBOL}')\n",
+    "    for ax in g.axes[:,0]:\n",
+    "        ax.set_ylabel(f'P({OPINION_SYMBOL})')\n",
+    "    g.add_legend(fontsize='large')\n",
+    "    g.savefig(\"output/dist.pdf\")"
    ],
    "metadata": {
     "collapsed": false,
