implemented other formulations for Nudge sampling.

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -2175,6 +2175,7 @@
     "# Nudge arguments\n",
     "D = 3 #@param {type:\"slider\", min:0, max:20, step:0.5}\n",
     "sample_size = 10 #@param {type:\"slider\", min:1, max:100, step:1}\n",
+    "sample_method = \"basic\" #@param [\"basic\", \"outer_sigmoid\", \"inner_sigmoid\", \"subsample\"]\n",
     "\n",
     "variable_name = \"Euler\" #@param [\"Euler\", \"RK45\"]\n",
     "iterations = 1 #@param {type:\"slider\", min:1, max:20, step:1}\n",
@@ -2188,7 +2189,7 @@
     "for i in range(iterations):\n",
     "    sc = Simulation.run_params(cls=SampleChamber, N=N, m=m, K=K, alpha=α, beta=β,\n",
     "                               activity=activity_distribution, gamma=Υ, epsilon=ε,\n",
-    "                               r=r, dt=dt, T=T, D=D, sample_size=sample_size,\n",
+    "                               r=r, dt=dt, T=T, D=D, sample_size=sample_size, sample_method=sample_method,\n",
     "                               method=\"Euler\",\n",
     "                               plot_opinion=False,\n",
     "                               seed=seeds[i], cache=\"all\")\n",
@@ -2209,6 +2210,72 @@
    },
    "execution_count": null,
    "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Compare sample methods"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from opdynamics.dynamics.opinions import clt_methods\n",
+    "\n",
+    "\n",
+    "# polar opinions\n",
+    "N = 1000 #@param {type:\"integer\"}\n",
+    "m = 10 #@param {type:\"integer\"}\n",
+    "α = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "K = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "ε = 0.01 #@param {type:\"slider\", min:0.005, max:0.05, step:0.005}\n",
+    "Υ = 2.1 #@param {type:\"slider\", min:0, max:3, step:0.1}\n",
+    "β = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "r = 0.5 #@param {type:\"slider\", min:0, max:1, step:0.1}\n",
+    "activity_distribution = negpowerlaw\n",
+    "dt = 0.01\n",
+    "T = 5 #@param {type:\"slider\", min:0, max:10, step:1}\n",
+    "# Nudge arguments\n",
+    "D = 3 #@param {type:\"slider\", min:0, max:20, step:0.5}\n",
+    "sample_size = 10 #@param {type:\"slider\", min:1, max:100, step:1}\n",
+    "seed_idx = 10 #@param {type:\"slider\", min:0, max:20, step:1}\n",
+    "variable_name = \"Euler\" #@param [\"Euler\", \"RK45\"]\n",
+    "\n",
+    "clt_method_names = list(clt_methods.keys())\n",
+    "fig, ax = plt.subplots(len(clt_method_names), 2, gridspec_kw=dict(width_ratios=[1,0.1]), sharey=True)\n",
+    "fig.subplots_adjust(wspace=0.1, hspace=0.5)\n",
+    "palette = sns.color_palette(\"husl\", n_colors=iterations)\n",
+    "\n",
+    "seeds = np.geomspace(1, 100000, num=20, dtype=int)\n",
+    "\n",
+    "for i, sample_method in i, enumerate(clt_method_names):\n",
+    "    sc = Simulation.run_params(cls=SampleChamber, N=N, m=m, K=K, alpha=α, beta=β,\n",
+    "                               activity=activity_distribution, gamma=Υ, epsilon=ε,\n",
+    "                               r=r, dt=dt, T=T, D=D, sample_size=sample_size, sample_method=sample_method,\n",
+    "                               method=\"Euler\",\n",
+    "                               plot_opinion=False,\n",
+    "                               seed=seeds[seed_idx],\n",
+    "                               cache=\"all\")\n",
+    "\n",
+    "    vis = VisEchoChamber(sc)\n",
+    "    vis.show_opinions(color_code='line', ax=ax[i, 0])\n",
+    "    vis.show_opinions_snapshot(ax=ax[i, 1], vertical=True,\n",
+    "                            kde_kws=dict(bw=0.1), color=palette[i])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -2320,8 +2387,17 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "zs = plot_surfaces(df, \"D\", \"sample_size\", parameters, range_parameters)\n",
-    "plt.gcf().savefig(os.path.join(\"output\",\"d_sample_surface.pdf\"))"
+    "from matplotlib.cbook import flatten\n",
+    "from matplotlib.colors import LogNorm\n",
+    "with sns.plotting_context('paper'):\n",
+    "    zs = plot_surfaces(df, \"D\", \"sample_size\", parameters, range_parameters,\n",
+    "                       rasterized=True, # False for a LARGE pdf\n",
+    "                       )\n",
+    "    fig = plt.gcf()\n",
+    "    fig.axes[0].set_xlim(0,5)\n",
+    "    fig.axes[0].set_ylim(0,50)\n",
+    "    sns.despine(offset=0, trim=False)\n",
+    "    plt.gcf().savefig(os.path.join(\"output\",\"d_sample_surface.pdf\"))"
    ],
    "metadata": {
     "collapsed": false,
@@ -2517,62 +2593,49 @@
     "K = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
     "β = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
     "\n",
-    "grid_kwargs = dict(sharex=True, sharey=False,\n",
-    "                   margin_titles=True, legend_out=True)\n",
-    "kde_kwargs = dict(bw=0.01)\n",
-    "\n",
     "assert α in range_parameters['alpha']['range']\n",
     "assert β in range_parameters['beta']['range']\n",
     "assert K in range_parameters['K']['range']\n",
     "\n",
-    "\n",
     "defaults = {\n",
     "    'alpha': α,\n",
     "    'K': K,\n",
-    "    # 'beta': β,\n",
+    "    'beta': β,\n",
     "}\n",
     "sub_D_range = [0.0, 1.0, 3.0, 5.0]\n",
     "sub_sample_range = [1, 10, 40]\n",
+    "print(\"masking\")\n",
     "sub_df = df_multi_mask(\n",
     "    df[\n",
     "        (df[\"D\"].isin(sub_D_range))\n",
     "        & (df[\"sample_size\"].isin(sub_sample_range))\n",
     "    ],\n",
     "    defaults,\n",
-    ").to_pandas_df()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
+    ").to_pandas_df().rename({'sample_size':'n', 'opinion':OPINION_SYMBOL}, axis=1)\n",
+    "print(\"plotting\")\n",
     "with sns.plotting_context(\"paper\"):\n",
-    "    sns.set_palette(sns.color_palette('colorblind',3))\n",
+    "    sns.set_palette(sns.color_palette(\"colorblind\", len(sub_sample_range)))\n",
     "    n_cols = len(sub_D_range)\n",
-    "    n_rows = len(sub_sample_range)\n",
-    "    width = 3.375*2/n_cols\n",
-    "    aspect = 1.5\n",
+    "    n_rows = 1\n",
+    "    width = 3.375/n_cols\n",
+    "    aspect = 1\n",
     "    height = width/aspect\n",
-    "    grid_kwargs = dict(sharex=True, sharey=False,\n",
-    "                   margin_titles=True, legend_out=True, height=height, aspect=aspect)\n",
-    "    kde_kwargs = dict(bw=0.001)\n",
-    "    g = show_opinion_grid(sub_df.rename({'sample_size':'n', 'beta':'β'}, axis=1),\n",
-    "                          ['D','n', 'β'],\n",
-    "                          grid_kwargs=grid_kwargs, kde_kwargs=kde_kwargs)\n",
+    "    grid_kwargs = dict(sharex=True, sharey=True,\n",
+    "                    margin_titles=False, legend_out=True, height=height, aspect=aspect)\n",
+    "    kde_kwargs = dict(bw=0.1)\n",
+    "    g = sns.FacetGrid(sub_df, col=\"D\", hue=\"n\", **grid_kwargs)\n",
+    "\n",
+    "    kde_kwargs.setdefault(\"shade\", True)\n",
+    "    kde_kwargs.setdefault(\"shade_lowest\", False)\n",
+    "    g.map(sns.kdeplot, OPINION_SYMBOL, **kde_kwargs)\n",
     "    g.set(xlim=(-5,5))\n",
     "    for ax in g.axes[-1]:\n",
     "        ax.set_xlabel(f'{OPINION_SYMBOL}')\n",
     "    for ax in g.axes[:,0]:\n",
     "        ax.set_ylabel(f'P({OPINION_SYMBOL})')\n",
     "    g.add_legend(fontsize='large')\n",
-    "    g.savefig(\"output/dist.pdf\")"
+    "    print(\"saving\")\n",
+    "    g.savefig(\"output/dist_n.pdf\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -2586,8 +2649,35 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "g = sns.relplot(x=\"opinion\", y=\"D\", hue=\"sample_size\", size=\"alpha\", style=\"beta\",\n",
-    "                kind='scatter', data=sub_df)\n"
+    "defaults = {\n",
+    "    'alpha': α,\n",
+    "    'K': K,\n",
+    "    'beta': β,\n",
+    "}\n",
+    "sub_D_range = np.round(np.arange(0.0, 5.0001, 0.1), 3)\n",
+    "print(\"masking\")\n",
+    "sub_df = df_multi_mask(\n",
+    "    df[\n",
+    "        (df[\"D\"].isin(sub_D_range))\n",
+    "        & (df[\"sample_size\"]==1)\n",
+    "    ],\n",
+    "    defaults,\n",
+    ").to_pandas_df().rename({'opinion':OPINION_SYMBOL}, axis=1)\n",
+    "print(\"plotting\")\n",
+    "with sns.plotting_context(\"paper\"):\n",
+    "    fig, axs = plt.subplots(ncols=2, figsize=(2, 2), dpi=200, gridspec_kw=dict(width_ratios=[1, 0.1]))\n",
+    "    ax = axs[0]\n",
+    "    cbar_ax = axs[1]\n",
+    "    sns.kdeplot(sub_df[OPINION_SYMBOL], sub_df[\"D\"],\n",
+    "                # bw=0.1,\n",
+    "                shade=True, shade_lowest=True, cmap='Spectral_r',\n",
+    "                cbar=True,cbar_ax=cbar_ax,\n",
+    "                ax=ax)\n",
+    "    ax.set_xlim(-4, 4)\n",
+    "    # ax.set_ylim(0, 5)\n",
+    "    cbar_ax.set_title(f\"P(x, D)\")\n",
+    "    fig.tight_layout()\n",
+    "    fig.savefig(\"output/x_v_d.pdf\",tight=True)"
    ],
    "metadata": {
     "collapsed": false,
