notebook has comparison of sample methods, including custom methods specified within the notebook also - fixed json encoding for numpy types - fixed p_conn staying None

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -2177,7 +2177,7 @@
     "sample_size = 10 #@param {type:\"slider\", min:1, max:100, step:1}\n",
     "sample_method = \"basic\" #@param [\"basic\", \"outer_sigmoid\", \"inner_sigmoid\", \"subsample\"]\n",
     "\n",
-    "variable_name = \"Euler\" #@param [\"Euler\", \"RK45\"]\n",
+    "integration_method = \"Euler\" #@param [\"Euler\", \"RK45\"]\n",
     "iterations = 1 #@param {type:\"slider\", min:1, max:20, step:1}\n",
     "\n",
     "fig, ax = plt.subplots(1, 2, gridspec_kw=dict(width_ratios=[1,0.1]), sharey=True)\n",
@@ -2189,8 +2189,9 @@
     "for i in range(iterations):\n",
     "    sc = Simulation.run_params(cls=SampleChamber, N=N, m=m, K=K, alpha=α, beta=β,\n",
     "                               activity=activity_distribution, gamma=Υ, epsilon=ε,\n",
-    "                               r=r, dt=dt, T=T, D=D, sample_size=sample_size, sample_method=sample_method,\n",
-    "                               method=\"Euler\",\n",
+    "                               r=r, dt=dt, T=T, D=D,\n",
+    "                               sample_size=sample_size, sample_method=sample_method,\n",
+    "                               method=integration_method,\n",
     "                               plot_opinion=False,\n",
     "                               seed=seeds[i], cache=\"all\")\n",
     "\n",
@@ -2244,31 +2245,86 @@
     "dt = 0.01\n",
     "T = 5 #@param {type:\"slider\", min:0, max:10, step:1}\n",
     "# Nudge arguments\n",
-    "D = 3 #@param {type:\"slider\", min:0, max:20, step:0.5}\n",
-    "sample_size = 10 #@param {type:\"slider\", min:1, max:100, step:1}\n",
+    "D = 1 #@param {type:\"slider\", min:0, max:20, step:0.5}\n",
+    "sample_size = 1 #@param {type:\"slider\", min:1, max:100, step:1}\n",
     "seed_idx = 10 #@param {type:\"slider\", min:0, max:20, step:1}\n",
-    "variable_name = \"Euler\" #@param [\"Euler\", \"RK45\"]\n",
+    "integration_method = \"RK45\" #@param [\"Euler\", \"RK45\"]\n",
     "\n",
-    "clt_method_names = list(clt_methods.keys())\n",
-    "fig, ax = plt.subplots(len(clt_method_names), 2, gridspec_kw=dict(width_ratios=[1,0.1]), sharey=True)\n",
+    "clt_method_names = [k for k in clt_methods.keys() if k is not None]\n",
+    "\n",
+    "# custom sample methods\n",
+    "from opdynamics.metrics.opinions import sample_means\n",
+    "\n",
+    "def custom_sample_n1v1000(ec, y: np.ndarray, n: int, num_samples: int):\n",
+    "    ec._sample_means = (\n",
+    "        sample_means(y, 1, num_samples=num_samples, rng=ec.rn) -\n",
+    "        sample_means(y, 1000, num_samples=num_samples, rng=ec.rn)\n",
+    "    )\n",
+    "def custom_sample_n1v100(ec, y: np.ndarray, n: int, num_samples: int):\n",
+    "    ec._sample_means = (\n",
+    "        sample_means(y, 1, num_samples=num_samples, rng=ec.rn) -\n",
+    "        sample_means(y, 100, num_samples=num_samples, rng=ec.rn)\n",
+    "    )\n",
+    "def custom_sample_n1vmean(ec, y: np.ndarray, n: int, num_samples: int):\n",
+    "    ec._sample_means = (\n",
+    "        sample_means(y, 1, num_samples=num_samples, rng=ec.rn) -\n",
+    "        np.mean(y)\n",
+    "    )\n",
+    "def custom_sample_n1v1(ec, y: np.ndarray, n: int, num_samples: int):\n",
+    "    ec._sample_means = (\n",
+    "        sample_means(y, 1, num_samples=num_samples, rng=ec.rn) -\n",
+    "        sample_means(y, 1, num_samples=num_samples, rng=ec.rn)\n",
+    "    )\n",
+    "def custom_sample_n1v10(ec, y: np.ndarray, n: int, num_samples: int):\n",
+    "    ec._sample_means = (\n",
+    "        sample_means(y, 1, num_samples=num_samples, rng=ec.rn) -\n",
+    "        sample_means(y, 10, num_samples=num_samples, rng=ec.rn)\n",
+    "    )\n",
+    "def custom_sample_n1v0(ec, y: np.ndarray, n: int, num_samples: int):\n",
+    "    ec._sample_means = sample_means(y, 1, num_samples=num_samples, rng=ec.rn)\n",
+    "def custom_sample_n0v1(ec, y: np.ndarray, n: int, num_samples: int):\n",
+    "    ec._sample_means = -sample_means(y, 1, num_samples=num_samples, rng=ec.rn)\n",
+    "def custom_sample_n0(ec, y: np.ndarray, n: int, num_samples: int):\n",
+    "    ec._sample_means = 0\n",
+    "\n",
+    "clt_method_names += [\n",
+    "                   custom_sample_n1v1000,\n",
+    "                   custom_sample_n1v100,\n",
+    "                   custom_sample_n1v10,\n",
+    "                   custom_sample_n1v1,\n",
+    "                   custom_sample_n1vmean,\n",
+    "                   custom_sample_n1v0,\n",
+    "                   custom_sample_n0v1,\n",
+    "                   custom_sample_n0]\n",
+    "\n",
+    "fig, ax = plt.subplots(len(clt_method_names), 2, gridspec_kw=dict(width_ratios=[1,0.1]),\n",
+    "                       sharey='row',\n",
+    "                       sharex='col',\n",
+    "                       dpi=250)\n",
     "fig.subplots_adjust(wspace=0.1, hspace=0.5)\n",
-    "palette = sns.color_palette(\"husl\", n_colors=iterations)\n",
+    "palette = sns.color_palette(\"husl\", n_colors=len(clt_method_names))\n",
     "\n",
     "seeds = np.geomspace(1, 100000, num=20, dtype=int)\n",
     "\n",
-    "for i, sample_method in i, enumerate(clt_method_names):\n",
+    "for i, sample_method in enumerate(clt_method_names):\n",
     "    sc = Simulation.run_params(cls=SampleChamber, N=N, m=m, K=K, alpha=α, beta=β,\n",
     "                               activity=activity_distribution, gamma=Υ, epsilon=ε,\n",
-    "                               r=r, dt=dt, T=T, D=D, sample_size=sample_size, sample_method=sample_method,\n",
-    "                               method=\"Euler\",\n",
+    "                               r=r, dt=dt, T=T,\n",
+    "                               D=D, sample_size=sample_size, sample_method=sample_method,\n",
+    "                               method=integration_method,\n",
     "                               plot_opinion=False,\n",
     "                               seed=seeds[seed_idx],\n",
     "                               cache=\"all\")\n",
     "\n",
     "    vis = VisEchoChamber(sc)\n",
-    "    vis.show_opinions(color_code='line', ax=ax[i, 0])\n",
+    "    vis.show_opinions(color_code='line', ax=ax[i, 0],\n",
+    "                      title=sample_method if type(sample_method) is str else sample_method.__name__)\n",
     "    vis.show_opinions_snapshot(ax=ax[i, 1], vertical=True,\n",
-    "                            kde_kws=dict(bw=0.1), color=palette[i])"
+    "                            kde_kws=dict(bw=0.1), color=palette[i], title=None)\n",
+    "    if i<len(clt_method_names):\n",
+    "        ax[i,0].set_xlabel(\"\")\n",
+    "        ax[i,1].set_xlabel(\"\")\n",
+    "    ax[i,0].set_ylim(-5,5)"
    ],
    "metadata": {
     "collapsed": false,
