--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -2351,18 +2351,15 @@
     "# run this to determine D range\n",
     "from opdynamics.utils.cache import get_cache_dir\n",
     "import vaex\n",
-    "all_d = set()\n",
+    "all_d = np.round(np.arange(0.0, 5.0001, 0.1), 3)\n",
     "\n",
     "cache_dir = get_cache_dir()\n",
     "file_name = os.path.join(cache_dir, \"noise_source.h5\")\n",
     "vaex_file_name = file_name.replace(\".h5\", \".hdf5\")\n",
     "\n",
-    "if os.path.exists(file_name):\n",
-    "    if os.path.exists(vaex_file_name):\n",
-    "        df = vaex.open(vaex_file_name)\n",
-    "        for start, end, chunk in df.to_pandas_df(chunk_size=50000):\n",
-    "            all_d.update(set(chunk['D']))\n",
-    "all_d"
+    "if os.path.exists(vaex_file_name):\n",
+    "    df = vaex.open(vaex_file_name)\n",
+    "    all_d = sorted(df['D'].unique())"
    ],
    "metadata": {
     "collapsed": false,
@@ -2397,7 +2394,7 @@
     "    method=\"Euler\",\n",
     ")\n",
     "\n",
-    "D_range = sorted(all_d) # np.round(np.arange(0.0, 5.0001, 0.1), 3)\n",
+    "D_range = all_d\n",
     "\n",
     "sample_size_range = np.arange(1, 50.0001, 1, dtype=int)\n",
     "\n",
